examples/error/NoMain.c
int funzione(int c, float b, string d, bool k){
	int a;
}
